src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Challenge</fullName>
        <description>A donation challenging others to match it at a certain rate.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Payment Received</fullName>
        </values>
        <values>
            <fullName>Planned</fullName>
        </values>
        <values>
            <fullName>Promised</fullName>
        </values>
        <values>
            <fullName>Send Pledge Reminder</fullName>
        </values>
        <values>
            <fullName>Thank you mailed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Donation</fullName>
        <description>Small (not major) donations, usually from letters or mass solicitations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Donation Received</fullName>
        </values>
        <values>
            <fullName>Promised</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Send Pledge Reminder</fullName>
        </values>
        <values>
            <fullName>Thank you mailed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Event</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Payment Received</fullName>
        </values>
        <values>
            <fullName>Promised</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <description>Grant process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Grant Awarded</fullName>
        </values>
        <values>
            <fullName>Grant Denied</fullName>
        </values>
        <values>
            <fullName>Grant Prep</fullName>
        </values>
        <values>
            <fullName>Grant Submitted</fullName>
        </values>
        <values>
            <fullName>Grant Under Review</fullName>
        </values>
        <values>
            <fullName>Meeting Scheduled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Donation</fullName>
        <description>Major donations that you actively solicit from the individual.  (ie. face to face asks)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Ask Accepted</fullName>
        </values>
        <values>
            <fullName>Ask Denied</fullName>
        </values>
        <values>
            <fullName>Ask Under Review</fullName>
        </values>
        <values>
            <fullName>Donation Received</fullName>
        </values>
        <values>
            <fullName>Letter Sent</fullName>
        </values>
        <values>
            <fullName>Meeting Scheduled</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Send Pledge Reminder</fullName>
        </values>
        <values>
            <fullName>Thank you mailed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Membership</fullName>
        <description>Membership Renewal Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Payment Received</fullName>
        </values>
        <values>
            <fullName>Send Pledge Reminder</fullName>
        </values>
        <values>
            <fullName>Unpaid</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Payment For Goods Or Services</fullName>
        <description>Payment for a workshop, or a t-shirt, or contracting service</description>
        <isActive>true</isActive>
        <values>
            <fullName>Donation Received</fullName>
        </values>
        <values>
            <fullName>Payment Received</fullName>
        </values>
        <values>
            <fullName>Promised</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pledge</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Planned</fullName>
        </values>
        <values>
            <fullName>Pledge Recorded</fullName>
        </values>
        <values>
            <fullName>Promised</fullName>
        </values>
        <values>
            <fullName>Send Pledge Reminder</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Volunteer_Task</fullName>
        <description>Recruiting and following up with a volunteer for a task</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Adopted</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Orphan</fullName>
        </values>
        <values>
            <fullName>Planned</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Amount_of_Ask__c</fullName>
        <description>How much will you ask the individual for?</description>
        <inlineHelpText>How much will you ask the individual for?</inlineHelpText>
        <label>Amount of Ask</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Deadline__c</fullName>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <description>Amount remaining to be paid against pledge.</description>
        <formula>Pledge_Amount__c -  Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount remaining to be paid against pledge.</inlineHelpText>
        <label>Balance_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C_P_Custom_Payment_Name__c</fullName>
        <description>The CustomPaymentName from the Swiper1 transaction, in the case that a person paid with cash or a check.</description>
        <inlineHelpText>The CustomPaymentName from the Swiper1 transaction, in the case that a person paid with cash or a check.</inlineHelpText>
        <label>C&amp;P Custom Payment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_P_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C&amp;P Data</label>
        <referenceTo>CnP_PaaS_Bridge__CnPData__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <formula>YEAR( CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calendar year of a contribution based on close date.</inlineHelpText>
        <label>Calendar Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challenge_Target__c</fullName>
        <description>Total amount to be raised, including the challenge and the matches.</description>
        <formula>IF( Matching__c  &gt; 0, Amount  * (1 +  Matching__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount to be raised, including the challenge and the matches.</inlineHelpText>
        <label>Challenge Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Num_Text__c</fullName>
        <label>Check_Num_Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_Text__c</fullName>
        <formula>CASE(MONTH(CloseDate), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + 
TEXT(DAY( CloseDate )) 
+ &quot;, &quot; + TEXT(YEAR( CloseDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnPMasterPledgeID__c</fullName>
        <description>The unique ID of the CnP MasterTransactionNumber, against which incoming payments will be matched.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID of the CnP MasterTransactionNumber, against which incoming payments will be matched.</inlineHelpText>
        <label>CnPMasterPledgeID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnPMasterTransactionNumber__c</fullName>
        <description>ID field for the &quot;master transaction&quot; of a series of recurring payments.</description>
        <inlineHelpText>ID field for the &quot;master transaction&quot; of a series of recurring payments.</inlineHelpText>
        <label>CnPMasterTransactionNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constant1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person primarily associated with this contribution.</description>
        <inlineHelpText>The person primarily associated with this contribution.</inlineHelpText>
        <label>Primary Contributor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contributions</relationshipLabel>
        <relationshipName>Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContribOrder__c</fullName>
        <description>What is the number of this contribution in the chronological order of the account contributions.  If this is the first contribution, 1, if the second, 2, etc.</description>
        <inlineHelpText>What is the number of this contribution in the chronological order of the account contributions.  If this is the first contribution, 1, if the second, 2, etc.</inlineHelpText>
        <label>ContribOrder</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contribution_Year__c</fullName>
        <formula>TEXT( YEAR( CloseDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The year of the donation, taken from the Close Date.</inlineHelpText>
        <label>Contribution Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked to Contribution</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomAnswer1__c</fullName>
        <label>CustomAnswer1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomAnswer2__c</fullName>
        <label>CustomAnswer2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomAnswer3__c</fullName>
        <label>CustomAnswer3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomQuestion1__c</fullName>
        <label>CustomQuestion1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomQuestion2__c</fullName>
        <label>CustomQuestion2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomQuestion3__c</fullName>
        <label>CustomQuestion3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Acknowledged__c</fullName>
        <description>Date the Thank You Letter was sent. Note: The Thank You Letter routine presumes that if you generate a letter you have sent it, and inserts the current date into this field, as well as changing the Opportunity.Stage to &quot;Thank You Mailed.&quot;</description>
        <inlineHelpText>Date the Thank You Letter was sent. Note: The Thank You Letter routine presumes that if you generate a letter you have sent it, and inserts the current date into this field, as well as changing the Opportunity.Stage to &quot;Thank You Mailed.&quot;</inlineHelpText>
        <label>Date_Acknowledged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dedication_Acknowledgement_Type__c</fullName>
        <description>Used for NFG integration.</description>
        <label>Dedication Acknowledgement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dedication_Honoree_Name__c</fullName>
        <label>Dedication Honoree Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Personal_Note__c</fullName>
        <label>Dedication Personal Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Address__c</fullName>
        <label>Dedication Recipient Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Email_Address__c</fullName>
        <description>email address for sending dedication acknowledgments to donors&apos; loved ones</description>
        <label>Dedication Recipient Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_First_Name__c</fullName>
        <label>Dedication Recipient First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Last_Name__c</fullName>
        <label>Dedication Recipient Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Type__c</fullName>
        <description>Used for NFG integration.</description>
        <label>Dedication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in honor</fullName>
                </value>
                <value>
                    <fullName>in memory</fullName>
                </value>
                <value>
                    <fullName>on behalf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_It_Again__c</fullName>
        <description>Would the volunteer like to do this task again?</description>
        <inlineHelpText>Would the volunteer like to do this task again?</inlineHelpText>
        <label>Do It Again</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Absolutely Not</fullName>
                </value>
                <value>
                    <fullName>2 - Probably not</fullName>
                </value>
                <value>
                    <fullName>3 - Probably</fullName>
                </value>
                <value>
                    <fullName>4 - Yes.</fullName>
                </value>
                <value>
                    <fullName>5 - Enthusiastic yes!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donate_Lapse__c</fullName>
        <description>Days until the next donation.  (Donation types specified in custom setting.)</description>
        <inlineHelpText>Days until the next donation.  (Donation types specified in custom setting.)</inlineHelpText>
        <label>Donate_Lapse</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <description>The fair market value of any goods or services provided to the person who gives a donation.</description>
        <inlineHelpText>The fair market value of any goods or services provided to the person who gives a donation.  For example, if tickets to your annual dinner cost $100, and the dinner is worth $25 a plate, then the FMV for the tickets is $25.</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Fund</fullName>
                </value>
                <value>
                    <fullName>Building Fund</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_in_Last_2_Years__c</fullName>
        <description>Flags whether a gift falls within the last 2 years.</description>
        <formula>IF(  TODAY() - CloseDate  &lt;= 730 , &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flags whether a gift falls within the last 2 years.</inlineHelpText>
        <label>Gift in Last 2 Years?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_for_Vol_Task__c</fullName>
        <defaultValue>18.05</defaultValue>
        <description>The value of this donation of time per hour.</description>
        <inlineHelpText>The value of this donation of time per hour.  Specific rates by profession at http://archive.pointsoflight.org/resources/research/calculator.cfm</inlineHelpText>
        <label>Hourly Rate for Vol Task</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Actual__c</fullName>
        <description>How many hours did the volunteer actually spend? (It&apos;s best to fill this in after talking with the volunteer.)</description>
        <inlineHelpText>How many hours did the volunteer actually spend? (It&apos;s best to fill this in after talking with the volunteer.)</inlineHelpText>
        <label>Hours Actual</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Estimated__c</fullName>
        <description>How many hours do you estimate the task will require?</description>
        <inlineHelpText>How many hours do you estimate the task will require?</inlineHelpText>
        <label>Hours Estimated</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportObjectSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which importObject was this contribution created from?</description>
        <inlineHelpText>Which importObject was this contribution created from?</inlineHelpText>
        <label>ImportObjectSource</label>
        <referenceTo>ImportObject__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>ContributionsFromThisImportObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <description>How much will the individual payments against the pledge be?  Calculated.</description>
        <inlineHelpText>How much will the individual payments against the pledge be?</inlineHelpText>
        <label>Installment_Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Nr__c</fullName>
        <label>Installment_Nr</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadership_Level__c</fullName>
        <description>Volunteers carry out individual tasks. Leaders carry out tasks which require managing other people.</description>
        <inlineHelpText>Use &quot;Volunteers&quot; if the person did not recruit or supervise anyone else. Use &quot;Leader&quot; if they did.</inlineHelpText>
        <label>Leadership Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 - Leader</fullName>
                </value>
                <value>
                    <fullName>1 - Volunteer</fullName>
                    <default>true</default>
                    <label>1 - Volunteer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Contribution_ID__c</fullName>
        <description>ID from previous database.</description>
        <label>Legacy_Contribution_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Task__c</fullName>
        <description>Where the volunteer will complete the task. Optional.</description>
        <inlineHelpText>Where the volunteer will complete the task. Optional.</inlineHelpText>
        <label>Location of Task</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Location 1</fullName>
                </value>
                <value>
                    <fullName>Location 2</fullName>
                </value>
                <value>
                    <fullName>Location 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matches_Which_Challenge_or_Pledge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which challenge or pledge should this donation be matched against?</description>
        <inlineHelpText>Which challenge or pledge should this donation be matched against?</inlineHelpText>
        <label>Matches_Which_Challenge_or_Pledge</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments Against Challenge or Pledge</relationshipLabel>
        <relationshipName>Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Close_Date__c</fullName>
        <label>Matching Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_Status__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Posted</fullName>
                    <default>true</default>
                    <label>Not Posted</label>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matching__c</fullName>
        <description>What percentage match does this challenge donation require?  Enter 50 if you have to match 50% of it with other donations, 100 if you have to match it 1 to 1, etc.</description>
        <inlineHelpText>What percentage match does this challenge donation require?  Enter 50 if you have to match 50% of it with other donations, 100 if you have to match it 1 to 1, etc.</inlineHelpText>
        <label>Matching %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_Lapse__c</fullName>
        <description>Number of days until next membership is paid.</description>
        <inlineHelpText>Number of days until next membership is paid.</inlineHelpText>
        <label>Member_Lapse</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_End_Date__c</fullName>
        <inlineHelpText>In MM/DD/YYYY format</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <description>Calculated by the ManageContributionsController to designate new memberships versus renewals.</description>
        <inlineHelpText>Calculated by the ManageContributionsController to designate new memberships versus renewals.</inlineHelpText>
        <label>Membership_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Membership</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Installment_Date__c</fullName>
        <label>Next Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Date__c</fullName>
        <description>The date the next pledge payment is due.</description>
        <inlineHelpText>The date the next pledge payment is due.</inlineHelpText>
        <label>Next_Payment_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due__c</fullName>
        <description>Calculated by the last installment date + the period to the next payment.  If this is a CnP donation, calculated from the CnP Next Installment Due field.</description>
        <inlineHelpText>Calculated by the last installment date + the period to the next payment.  If this is a CnP donation, calculated from the CnP Next Installment Due field.</inlineHelpText>
        <label>Next Payment Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step_Deadline__c</fullName>
        <inlineHelpText>When do you want to be reminded about the next step or an upcoming reporting deadline?</inlineHelpText>
        <label>Next Step Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Next steps for this contribution (ie. phone call to major donor, interim report to grantmaker, etc.)  Used by WaterGrass to sent reminders to the contribution owner.</description>
        <inlineHelpText>Next steps for this contribution (ie. phone call to major donor, interim report to grantmaker, etc.)  Used by WaterGrass to sent reminders to the contribution owner.</inlineHelpText>
        <label>Next Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nr_Ctcts_in_Membership__c</fullName>
        <description>How many people are included in this membership?  If it is below the family threshhold, only 1 person is included.  If it is above, all active members are included (Nr_Ctcts_in_Acct).</description>
        <inlineHelpText>How many people are included in this membership?  If it is below the family threshhold, only 1 person is included.  If it is above, all active members are included (Nr_Ctcts_in_Acct).</inlineHelpText>
        <label>Nr_Ctcts_in_Membership</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Click and Pledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>Payment for Service or Support.</description>
        <inlineHelpText>Payment for Service or Support, like a workshop.  NOT a donation or membership.  To enter those, click on the &quot;FR and Vol&apos; Contributions&quot; tab, click on &quot;New,&quot; and as type choose &quot;donation&quot; or &quot;membership.&quot;</inlineHelpText>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Periodicity__c</fullName>
        <description>Payments will be made against this pledge every ...</description>
        <inlineHelpText>Payments will be made against this pledge every ...</inlineHelpText>
        <label>Periodicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Periodicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pledge_Amount__c</fullName>
        <description>How much did the contact pledge to contribute?</description>
        <inlineHelpText>How much did the contact pledge to contribute?</inlineHelpText>
        <label>Pledge Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Fee__c</fullName>
        <description>Amount of fee charged by online processing service.</description>
        <inlineHelpText>Amount of fee charged by online processing service.</inlineHelpText>
        <label>Processing_Fee</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Designation__c</fullName>
        <label>Program Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instream structures</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Annual cleanup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_Supervisor_Support__c</fullName>
        <description>How good was the quality of support you got in order to do your volunteer task?</description>
        <inlineHelpText>How good was the quality of support you got in order to do your volunteer task?</inlineHelpText>
        <label>Quality of Supervisor Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not at all.</fullName>
                </value>
                <value>
                    <fullName>2 - Not completely.</fullName>
                </value>
                <value>
                    <fullName>3 - It was adequate.</fullName>
                </value>
                <value>
                    <fullName>4 - Yes</fullName>
                </value>
                <value>
                    <fullName>5 - Enthusiastic yes!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>